fixed double scrollbar

--- a/src/components/components.css
+++ b/src/components/components.css
@@ -31,7 +31,7 @@
 
 /* Back Button  Component */
 .back-button {
-  position: absolute;
+  position: relative;
   width: 100%;
   bottom: 0;
   box-shadow: 0px -15px 0px rgb(0, 0, 0) inset;
